--- a/app/globals.css
+++ b/app/globals.css
@@ -4,11 +4,11 @@
 
 /* base styles */
 body {
-  background: #ebf0fa;
+  background: #f1f0e0ae;
   @apply text-gray-500 m-8;
 }
 h1, h2 {
-  @apply font-bold text-primary text-lg;
+  @apply font-bold text-pretty text-lg text-right;
 }
 main {
   @apply max-w-5xl my-12 mx-auto px-8;
@@ -25,10 +25,13 @@ nav {
   @apply
     pb-4
     border-b-2 border-gray-200
-    flex items-center gap-5 
+    /* items-end gap-10 */
     my-10 mx-auto 
     max-w-5xl;
+       
+    
 }
+
 nav a, nav span {
   @apply text-gray-500;
 }
